Fix navigation bar overflow
Fix overflow bug on navigation bar introduced in #2670.

--- a/src/themes/admin_default/assets/scss/fossbilling.scss
+++ b/src/themes/admin_default/assets/scss/fossbilling.scss
@@ -68,7 +68,7 @@ body {
     .sticky-nav {
         position: sticky;
         top: 0;
-        overflow: hidden;
+        overflow: visible;
         z-index: 99;
     }
 }
